--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="sure_text">Are you sure you want to remove this item?</string>
     <string name="no_text">No</string>
     <string name="yes_text">Yes</string>
+    <string name="edit_item">Edit Item</string>
+    <string name="update_text">Update</string>
 </resources>
